--- a/ekoloko/index.html
+++ b/ekoloko/index.html
@@ -51,7 +51,7 @@ function getLanguageParameter() {
   return 'language='+p+'&';
 }
 
-var url = 'http://ekoloko.cf/ekoloko/login.html?'+getLanguageParameter()+'username='+getParameter('username')+'&friend='+getParameter('friend')+'&refCode='+getParameter('refCode')+'&directLogin='+getParameter('directLogin')+'&version='+getVersion();
+var url = '/ekoloko/login.html?'+getLanguageParameter()+'username='+getParameter('username')+'&friend='+getParameter('friend')+'&refCode='+getParameter('refCode')+'&directLogin='+getParameter('directLogin')+'&version='+getVersion();
   
 </script>
  
