--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ document.location.replace(url);
 <script type="text/javascript">
 
 //Direct page to:
-var url = 'http://ekoloko.cf/ekoloko/login.html';
+var url = '/ekoloko/login.html';
 
 function getParameter ( parameterName ) {
   var queryString = window.location.search
