--- a/ekoloko/login.html
+++ b/ekoloko/login.html
@@ -30,15 +30,15 @@ function getParameter ( parameterName ) {
   }
 }
 
-if(document.URL.indexOf('ekoloko.mako.', 0) >= 0) {
-  var url = "/ekoloko/login.html";
-  url = addUrlParam("language", url);       
-  url = addUrlParam("username", url);       
-  url = addUrlParam("friend", url);       
-  url = addUrlParam("refCode", url);       
-  url = addUrlParam("directLogin", url);      
-  document.location.replace(url);
-}
+// if(document.URL.indexOf('ekoloko.mako.', 0) >= 0) {
+//   var url = "/ekoloko/login.html";
+//   url = addUrlParam("language", url);       
+//   url = addUrlParam("username", url);       
+//   url = addUrlParam("friend", url);       
+//   url = addUrlParam("refCode", url);       
+//   url = addUrlParam("directLogin", url);      
+//   document.location.replace(url);
+// }
 
 
 function popUp(URL) {
